--- a/index.html
+++ b/index.html
@@ -14,7 +14,41 @@
 
 <body>
     <div class="container">
-        
+        <nav class="navbar">
+            <div class="navbar__logo">
+                <img src="img/logo.png" alt="logo" class="header__logo">
+            </div>
+            <ul class="navbar__list">
+                <li class="navbar__list-item">
+                    <a href="#gallery" class="navbar__list-link">Gallery</a>
+                </li>
+                <li class="navbar__list-item">
+                    <a href="#about" class="navbar__list-link">About</a>
+                </li>
+                <li class="navbar__list-item">
+                    <a href="#delivery" class="navbar__list-link">Delivery</a>
+                </li>
+                <li class="navbar__list-item">
+                    <a href="#reviews" class="navbar__list-link">Reviews</a>
+                </li>
+                <li class="navbar__list-item">
+                    <a href="#contact" class="navbar__list-link">Contact</a>
+                </li>
+            </ul>
+            <button class="btn btn-white navbar__btn">
+                <a class="btn__link" href="#">Contact me</a>
+            </button>
+        </nav>
+        <div class="header">
+            <h1>
+                Handcrafted cakes and <br>desserts made to order
+            </h1>
+            <p>At tempor commodo ullamcorper a lacus</p>
+            <button class="btn btn-dark header__btn">
+                <a class="btn__link" href="#order">Order</a>
+            </button>
+            <img src="img/main tart.png" alt="tart" class="header__img">
+        </div>
     </div>
 </body>
 </html>
