--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="#contact" class="navbar__list-link">Contact</a>
                 </li>
             </ul>
-            <button class="btn btn-white navbar__btn">
+            <button class="btn btn--light navbar__btn">
                 <a class="btn__link" href="#">Contact me</a>
             </button>
         </nav>
@@ -44,7 +44,7 @@
                 Handcrafted cakes and <br>desserts made to order
             </h1>
             <p>At tempor commodo ullamcorper a lacus</p>
-            <button class="btn btn-dark header__btn">
+            <button class="btn btn--dark header__btn">
                 <a class="btn__link" href="#order">Order</a>
             </button>
             <img src="img/main tart.png" alt="tart" class="header__img">
