--- a/index.html
+++ b/index.html
@@ -49,6 +49,42 @@
             </button>
             <img src="img/main tart.png" alt="tart" class="header__img">
         </div>
+        <div class="berry">
+            <img src="img/strawberry 1.png" alt="strawberry" class="berry__strawberry">
+        </div>
+        <div class="gallery">
+            <h2 class="gallery__h2">Gallery of dessets</h2>
+            <div class="gallery__select">
+                <button class="gallery__btn-sm btn btn--small">Tarts</button>
+                <button class="gallery__btn-sm btn btn--small">Cupcakes</button>
+                <button class="gallery__btn-sm btn btn--small">Souffle</button>
+                <button class="gallery__btn-sm btn btn--small">Mini Desserts</button>
+            </div>
+            <div class="gallery__cakes">
+                <div class="gallery__cake gallery__cake--1">
+                    <img src="img/cupcake 1.png" alt="cupcake 1">
+                    <h3 class="gallery__cake-h3">Chocolate with Caramel</h3>
+                    <p class="gallery__cake-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                    <p class="gallery__cake-quantity">Min 6 pc</p>
+                    <div class="gallery__cake-price">$5</div>
+                </div>
+                <div class="gallery__cake gallery__cake--2">
+                    <img src="img/cupcake 2.png" alt="cupcake 2">
+                    <h3 class="gallery__cake-h3">Berry Biscuit</h3>
+                    <p class="gallery__cake-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                    <p class="gallery__cake-quantity">Min 6 pc</p>
+                    <div class="gallery__cake-price">$8</div>
+                </div>
+                <div class="gallery__cake gallery__cake--3">
+                    <img src="img/cupcake 3.png" alt="cupcake 3">
+                    <h3 class="gallery__cake-h3">Red Velvet</h3>
+                    <p class="gallery__cake-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
+                    <p class="gallery__cake-quantity">Min 6 pc</p>
+                    <div class="gallery__cake-price">$6.5</div>
+                </div>
+                <button class="btn btn--red gallery__btn">View more</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
