--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </li>
             </ul>
             <button class="btn btn--light navbar__btn">
-                <a class="btn__link" href="#">Contact me</a>
+                <a class="btn__link--light" href="#">Contact me</a>
             </button>
         </nav>
         <div class="header">
@@ -44,14 +44,20 @@
                 Handcrafted cakes and <br>desserts made to order
             </h1>
             <p>At tempor commodo ullamcorper a lacus</p>
+
             <button class="btn btn--dark header__btn">
-                <a class="btn__link" href="#order">Order</a>
+                <a class="btn__link--dark" href="#order">Order</a>
             </button>
+           
             <img src="img/main tart.png" alt="tart" class="header__img">
         </div>
         <div class="berry">
             <img src="img/strawberry 1.png" alt="strawberry" class="berry__strawberry">
         </div>
+        <div class="berry">
+            <img src="img/blueberry 1.png" alt="blueberry" class="berry__blueberry">
+        </div>
+
         <div class="gallery">
             <h2 class="gallery__h2">Gallery of dessets</h2>
             <div class="gallery__select">
@@ -82,8 +88,8 @@
                     <p class="gallery__cake-quantity">Min 6 pc</p>
                     <div class="gallery__cake-price">$6.5</div>
                 </div>
-                <button class="btn btn--red gallery__btn">View more</button>
             </div>
+            <button class="btn btn--pink gallery__btn">View more</button>
         </div>
     </div>
 </body>
