--- a/index.html
+++ b/index.html
@@ -91,6 +91,19 @@
             </div>
             <button class="btn btn--pink gallery__btn">View more</button>
         </div>
+
+        <div class="about" id="about">
+            <img src="img/Яна.png" alt="owner" class="about__pic">
+            <div class="about__text">
+                <h2 class="about__h2">About me</h2>
+                <p>Hello! My name is Jane. 
+                    I make crafted delicious and delicate desserts. Treat yourself and your loved ones!
+                </p>
+                <p>Here you can order cakes, cupcakes, mini-desserts, marshmallows, gingerbread, cheesecakes. 
+                    Any of your ideas can be brought to life!
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
