--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
             <button class="btn btn--pink gallery__btn">View more</button>
         </div>
 
+        <div class="berry">
+            <img src="img/malina 1.png" alt="raspberry" class="berry__raspberry">
+        </div>
+
         <div class="about" id="about">
             <img src="img/Яна.png" alt="owner" class="about__pic">
             <div class="about__text">
@@ -102,6 +106,33 @@
                 <p>Here you can order cakes, cupcakes, mini-desserts, marshmallows, gingerbread, cheesecakes. 
                     Any of your ideas can be brought to life!
                 </p>
+            </div>
+        </div>
+
+        <div class="features">
+            <div class="table">
+                <div class="table__icon">
+                    <img src="img/basket.svg" alt="">
+                </div>
+                <p class="feature__p">Only natural ingredients</p>
+            </div>
+            <div class="table">
+                <div class="table__icon">
+                    <img src="img/approach.svg" alt="">
+                </div>
+                <p class="feature__p">Individual approach to each client</p>
+            </div>
+            <div class="table">
+                <div class="table__icon">
+                    <img src="img/kids.svg" alt="">
+                </div>
+                <p class="feature__p">No trans fat. Great for kids!</p>
+            </div>
+            <div class="table">
+                <div class="table__icon">
+                    <img src="img/piggy.svg" alt="">
+                </div>
+                <p class="feature__p">Affordable prices</p>
             </div>
         </div>
     </div>
