Section My work

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <img src="img/main tart.png" alt="tart" class="header__img">
         </div>
         <div class="berry">
-            <img src="img/strawberry 1.png" alt="strawberry" class="berry__strawberry">
+            <img src="img/strawberry 1.png" alt="strawberry" class="berry__1">
         </div>
         <div class="berry">
-            <img src="img/blueberry 1.png" alt="blueberry" class="berry__blueberry">
+            <img src="img/blueberry 1.png" alt="blueberry" class="berry__2">
         </div>
 
         <div class="gallery">
@@ -93,7 +93,7 @@
         </div>
 
         <div class="berry">
-            <img src="img/malina 1.png" alt="raspberry" class="berry__raspberry">
+            <img src="img/malina 1.png" alt="raspberry" class="berry__3">
         </div>
 
         <div class="about" id="about">
@@ -118,7 +118,7 @@
             </div>
             <div class="table">
                 <div class="table__icon">
-                    <img src="img/approach.svg" alt="">
+                    
                 </div>
                 <p class="feature__p">Individual approach to each client</p>
             </div>
@@ -130,10 +130,59 @@
             </div>
             <div class="table">
                 <div class="table__icon">
-                    <img src="img/piggy.svg" alt="">
+
                 </div>
                 <p class="feature__p">Affordable prices</p>
             </div>
+        </div>
+
+        <div class="berry">
+            <img src="img/blueberry 2.png" alt="blueberry" class="berry__4">
+        </div>
+
+        <div class="mywork" id="mywork">
+            <h2 class="mywork__h2">Gallery</h2>
+
+            <figure class="mywork__item mywork__item--1">
+                <img src="img/pie 1.png" alt="mywork image 1" class="mywork__img">
+                <figcaption>Homemade pie with orange mousse and curd cream</figcaption>
+            </figure>
+
+            <figure class="mywork__item mywork__item--2">
+                <img src="img/pie 2.png" alt="mywork image 2" class="mywork__img">
+                <figcaption class="fig--small">Lorem ipsum dolor sit amet</figcaption>
+            </figure>
+
+            <figure class="mywork__item mywork__item--3">
+                <img src="img/pie 3.png" alt="mywork image 3" class="mywork__img">
+                <figcaption class="fig--small">Lorem ipsum dolor</figcaption class="fig--small">
+            </figure>
+
+            <figure class="mywork__item mywork__item--4">
+                <img src="img/pie 4.png" alt="mywork image 4" class="mywork__img">
+                <figcaption class="fig--small">Lorem ipsum dolor sit</figcaption>
+            </figure>
+
+            <figure class="mywork__item mywork__item--5">
+                <img src="img/pie 5.png" alt="mywork image 5" class="mywork__img">
+                <figcaption class="fig--small">Lorem ipsum dolor sit consectetur adipisicing</figcaption>
+            </figure>
+
+            <figure class="mywork__item gallery__item--6">
+                <img src="img/pie 6.png" alt="mywork image 6" class="mywork__img">
+                <figcaption class="fig--small">Lorem ipsum dolor</figcaption>
+            </figure>
+
+            <figure class="mywork__item mywork__item--7">
+                <img src="img/pie 7.png" alt="mywork image 7" class="mywork__img">
+                <figcaption class="fig--small">Lorem ipsum dolor sit amet</figcaption>
+            </figure>
+
+            <button class="btn btn--pink mywork__btn">View more</button>
+        </div>
+
+        <div class="berry">
+            <img src="img/Клубника 2.png" alt="strawberry" class="berry__5">
         </div>
     </div>
 </body>
