--- a/index.html
+++ b/index.html
@@ -184,6 +184,72 @@
         <div class="berry">
             <img src="img/Клубника 2.png" alt="strawberry" class="berry__5">
         </div>
+
+        <div class="delivery" id="delivery">
+            <h2 class="delivery__h2">Delivery and Payment</h2>
+            <div class="delivery__card delivery__card--1">
+                <svg class="delivery__icon">
+                    <use xlink:href="img/sprite.svg#lnr-bus"></use>
+                </svg>
+                <div class="delivery__card-text">
+                    <p>Delivery in the city</p>
+                    <p>$3.5</p>
+                </div>
+            </div>
+            <div class="delivery__card delivery__card--2">
+                <svg class="delivery__icon">
+                    <use xlink:href="img/sprite.svg#lnr-map-marker"></use>
+                </svg>
+                <div class="delivery__card-text">
+                    <p>Pickup at Patrick ponds, Moscow</p>
+                    <p>is FREE</p>
+                </div>
+            </div>
+            <div class="delivery__info">
+                <p>No pre-payment.</p>
+                <p>For orders over $30 pre-payment is 20%</p>
+            </div>
+        </div>
+
+        <div class="reviews" id="reviews">
+            <h2 class="reviews__h2">Reviews</h2>
+            <div class="review">
+                <div class="review__client--1">
+                    <img src="img/Titareva.png" class="review__img">
+                    <h4 class="review__h4">Helga</h4>
+                    <p class="review__p">I tried this miracle yesterday and was completely delighted. 
+                    Very tasty, tender and beautiful. 
+                    I recommend to everyone!</p>
+                </div>
+                <div class="review__client--2">
+                    <img src="img/Smirnova.png" class="review__img">
+                    <h4 class="review__h4">Lilly</h4>
+                    <p class="review__p">The cupcakes are amazing. 
+                        We really liked it, the filling inside is incredibly tasty.
+                    </p>
+                </div>
+                <div class="review__client--3">
+                    <img src="img/Panova.png" class="review__img">
+                    <h4 class="review__h4">Nathaly</h4>
+                    <p class="review__p">The desserts are very tender, tasty, delicious. 
+                        Even our little prince appreciated it. 
+                        For the first time he tried something not from the children's menu!
+                    </p>
+                </div>
+            </div>
+
+            <h2 class="reviews__h2">Need help?</h2>
+            <p class="reviews__p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Delectus culpa distinctio iste ab. Recusandae quisquam corrupti optio commodi.
+            </p>
+            <button class="btn btn--pink reviews__btn">Order here</button>
+        </div>
+        
+        <div class="berry">
+            <img src="img/strawberry 1.png" alt="strawberry" class="berry--6">
+        </div>
+
+        
     </div>
 </body>
 </html>
