--- a/index.html
+++ b/index.html
@@ -249,7 +249,31 @@
             <img src="img/strawberry 1.png" alt="strawberry" class="berry--6">
         </div>
 
+        <div class="contacts" id="contact">
+            <div class="contacts__box">
+                <h2 class="contacts__h2">Contacts</h2>
+                <div class="contacts__info">
+                    <svg class="contacts__icon">
+                        <use xlink:href="img/sprite.svg#lnr-map-marker"></use>
+                    </svg>
+                    <p>1234 Patrick ponds, Moscow</p>
+                    <svg class="contacts__icon">
+                        <use xlink:href="img/sprite.svg#lnr-phone-handset"></use>
+                    </svg>
+                    <p>+7 123 4567890</p>
+                    <svg class="contacts__icon">
+                        <use xlink:href="img/sprite.svg#lnr-envelope"></use>
+                    </svg>
+                    <p>order@sweettime.com</p>
+                </div>
+            </div>
+            <button class="btn btn--pink contacts__btn">Contact</button>
+        </div>
         
+        <img src="img/raspberries.png" alt="raspberries" class="contacts__img--main">
+        <img src="img/malina 1.png" alt="raspberry" class="contacts__img--1">
+        <img src="img/malina 2.png" alt="raspberry" class="contacts__img--2">
+        <img src="img/malina 3.png" alt="raspberry" class="contacts__img--3">
     </div>
 </body>
 </html>
