Section Features, icons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap" rel="stylesheet">
         
     <link rel="stylesheet" href="css/font_style.css">
     <link rel="stylesheet" href="css/style.css">
@@ -111,27 +111,27 @@
 
         <div class="features">
             <div class="table">
-                <div class="table__icon">
-                    <img src="img/basket.svg" alt="">
-                </div>
+                <svg class="table__icon">
+                    <use xlink:href="img/sprite.svg#icon-leaf"></use>
+                </svg>
                 <p class="feature__p">Only natural ingredients</p>
             </div>
             <div class="table">
-                <div class="table__icon">
-                    
-                </div>
-                <p class="feature__p">Individual approach to each client</p>
+                <svg class="table__icon">
+                    <use xlink:href="img/sprite.svg#icon-slideshare"></use>
+                </svg>
+                <p class="feature__p">Individual approach<br>to each client</p>
             </div>
             <div class="table">
-                <div class="table__icon">
-                    <img src="img/kids.svg" alt="">
-                </div>
-                <p class="feature__p">No trans fat. Great for kids!</p>
+                <svg class="table__icon">
+                    <use xlink:href="img/sprite.svg#icon-emoji-happy"></use>
+                </svg>
+                <p class="feature__p">No trans fat.<br>Great for kids!</p>
             </div>
             <div class="table">
-                <div class="table__icon">
-
-                </div>
+                <svg class="table__icon">
+                    <use xlink:href="img/sprite.svg#icon-credit-card"></use>
+                </svg>
                 <p class="feature__p">Affordable prices</p>
             </div>
         </div>
