--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
             </div>
             <div class="gallery__cakes">
                 <div class="gallery__cake gallery__cake--1">
-                    <img src="img/cupcake 1.png" alt="cupcake 1">
+                    <img src="img/cupcake 1.png" alt="cupcake 1" class="gallery__cake-img">
                     <h3 class="gallery__cake-h3">Chocolate with Caramel</h3>
                     <p class="gallery__cake-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
                     <p class="gallery__cake-quantity">Min 6 pc</p>
                     <div class="gallery__cake-price">$5</div>
                 </div>
                 <div class="gallery__cake gallery__cake--2">
-                    <img src="img/cupcake 2.png" alt="cupcake 2">
+                    <img src="img/cupcake 2.png" alt="cupcake 2" class="gallery__cake-img">
                     <h3 class="gallery__cake-h3">Berry Biscuit</h3>
                     <p class="gallery__cake-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
                     <p class="gallery__cake-quantity">Min 6 pc</p>
                     <div class="gallery__cake-price">$8</div>
                 </div>
                 <div class="gallery__cake gallery__cake--3">
-                    <img src="img/cupcake 3.png" alt="cupcake 3">
+                    <img src="img/cupcake 3.png" alt="cupcake 3" class="gallery__cake-img">
                     <h3 class="gallery__cake-h3">Red Velvet</h3>
                     <p class="gallery__cake-p">Lorem ipsum, dolor sit amet consectetur adipisicing elit</p>
                     <p class="gallery__cake-quantity">Min 6 pc</p>
@@ -189,7 +189,7 @@
             <h2 class="delivery__h2">Delivery and Payment</h2>
             <div class="delivery__card delivery__card--1">
                 <svg class="delivery__icon">
-                    <use xlink:href="img/sprite.svg#lnr-bus"></use>
+                    <use xlink:href="img/sprite1.svg#icon-truck"></use>
                 </svg>
                 <div class="delivery__card-text">
                     <p>Delivery in the city</p>
@@ -198,7 +198,7 @@
             </div>
             <div class="delivery__card delivery__card--2">
                 <svg class="delivery__icon">
-                    <use xlink:href="img/sprite.svg#lnr-map-marker"></use>
+                    <use xlink:href="img/sprite.svg#icon-location"></use>
                 </svg>
                 <div class="delivery__card-text">
                     <p>Pickup at Patrick ponds, Moscow</p>
@@ -239,8 +239,9 @@
             </div>
 
             <h2 class="reviews__h2">Need help?</h2>
-            <p class="reviews__p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Delectus culpa distinctio iste ab. Recusandae quisquam corrupti optio commodi.
+            <p class="reviews__p">If you need help, pls feel free contact me. 
+                I’ll tell you in detail about my desserts, give you ideas,
+                and I will choose the best option for you!
             </p>
             <button class="btn btn--pink reviews__btn">Order here</button>
         </div>
@@ -250,30 +251,33 @@
         </div>
 
         <div class="contacts" id="contact">
-            <div class="contacts__box">
-                <h2 class="contacts__h2">Contacts</h2>
-                <div class="contacts__info">
-                    <svg class="contacts__icon">
-                        <use xlink:href="img/sprite.svg#lnr-map-marker"></use>
+            <div class="contact">
+                <h2 class="contact__h2">Contacts</h2>
+                <div class="contact__info">
+                    <svg class="contact__icon">
+                        <use xlink:href="img/sprite.svg#icon-location"></use>
                     </svg>
                     <p>1234 Patrick ponds, Moscow</p>
-                    <svg class="contacts__icon">
-                        <use xlink:href="img/sprite.svg#lnr-phone-handset"></use>
+                    <svg class="contact__icon">
+                        <use xlink:href="img/sprite2.svg#icon-phone"></use>
                     </svg>
                     <p>+7 123 4567890</p>
-                    <svg class="contacts__icon">
-                        <use xlink:href="img/sprite.svg#lnr-envelope"></use>
+                    <svg class="contact__icon">
+                        <use xlink:href="img/sprite2.svg#icon-mail"></use>
                     </svg>
                     <p>order@sweettime.com</p>
                 </div>
-            </div>
-            <button class="btn btn--pink contacts__btn">Contact</button>
+                <button class="btn btn--pink contact__btn">Contact</button>
+
+                <img src="img/raspberries.png" alt="raspberries" class="contacts__img--main">
+                <img src="img/malina 1.png" alt="raspberry" class="contacts__img--1">
+                <img src="img/malina 2.png" alt="raspberry" class="contacts__img--2">
+                <img src="img/malina 3.png" alt="raspberry" class="contacts__img--3">
+            </div>  
         </div>
-        
-        <img src="img/raspberries.png" alt="raspberries" class="contacts__img--main">
-        <img src="img/malina 1.png" alt="raspberry" class="contacts__img--1">
-        <img src="img/malina 2.png" alt="raspberry" class="contacts__img--2">
-        <img src="img/malina 3.png" alt="raspberry" class="contacts__img--3">
+        <div class="footer">
+            
+        </div>
     </div>
 </body>
 </html>
