--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img src="img/blueberry 1.png" alt="blueberry" class="berry__2">
         </div>
 
-        <div class="gallery">
+        <div class="gallery" id="gallery">
             <h2 class="gallery__h2">Gallery of dessets</h2>
             <div class="gallery__select">
                 <button class="gallery__btn-sm btn btn--small">Tarts</button>
@@ -276,8 +276,29 @@
             </div>  
         </div>
         <div class="footer">
-            
+            <img src="img/logo.png" alt="logo" class="footer__logo">
+                <ul class="footer__menu footer__menu--1">
+                    <li class="footer__item"><a href="#gallery" class="footer__link">Our desserts</a></li>
+                    <li class="footer__item"><a href="#about" class="footer__link">About</a></li>
+                    <li class="footer__item"><a href="#mywork" class="footer__link">My work</a></li>
+                </ul>
+                <ul class="footer__menu footer__menu--2">
+                    <li class="footer__item"><a href="#delivery" class="footer__link">Delivery and Payment</a></li>
+                    <li class="footer__item"><a href="#reviews" class="footer__link">Reviews</a></li>
+                    <li class="footer__item"><a href="#contact" class="footer__link">Contact</a></li>
+                </ul>
+                <div class="footer__menu footer__menu--3">
+                    <button class="footer__btn btn btn--light">Contact</button>
+                    <div class="footer__social">
+                        <a href="#" class="nav__social-link"><i class="nav__icon fab fa-whatsapp"></i></a>
+                        <a href="#" class="nav__social-link"><i class="nav__icon fab fa-facebook-square"></i></a>
+                        <a href="#" class="nav__social-link"><i class="nav__icon fab fa-instagram"></i></a>
+                    </div>
+                </div>
         </div>
+        <p class="copyright">
+            Design by <a href="https://www.behance.net/olgashesta1041" target="_blank" class="copyright__link">Olga Shestakova</a>. Built by <a href="https://https://github.com/TanyaSeagull" target="_blank" class="copyright__link">Tanya Seagull</a>.
+        </p>
     </div>
 </body>
 </html>
