--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="gallery" id="gallery">
-            <h2 class="gallery__h2">Gallery of dessets</h2>
+            <h2 class="gallery__h2">Menu</h2>
             <div class="gallery__select">
                 <button class="gallery__btn-sm btn btn--small">Tarts</button>
                 <button class="gallery__btn-sm btn btn--small">Cupcakes</button>
@@ -144,22 +144,22 @@
             <h2 class="mywork__h2">Gallery</h2>
 
             <figure class="mywork__item mywork__item--1">
-                <img src="img/pie 1.png" alt="mywork image 1" class="mywork__img">
+                <img src="img/pie 1.jpg" alt="mywork image 1" class="mywork__img">
                 <figcaption>Homemade pie with orange mousse and curd cream</figcaption>
             </figure>
 
             <figure class="mywork__item mywork__item--2">
-                <img src="img/pie 2.png" alt="mywork image 2" class="mywork__img">
+                <img src="img/pie 2.jpg" alt="mywork image 2" class="mywork__img">
                 <figcaption class="fig--small">Lorem ipsum dolor sit amet</figcaption>
             </figure>
 
             <figure class="mywork__item mywork__item--3">
-                <img src="img/pie 3.png" alt="mywork image 3" class="mywork__img">
-                <figcaption class="fig--small">Lorem ipsum dolor</figcaption class="fig--small">
+                <img src="img/pie 3.jpg" alt="mywork image 3" class="mywork__img">
+                <figcaption class="fig--small">Lorem ipsum dolor</figcaption>
             </figure>
 
             <figure class="mywork__item mywork__item--4">
-                <img src="img/pie 4.png" alt="mywork image 4" class="mywork__img">
+                <img src="img/pie 4.jpg" alt="mywork image 4" class="mywork__img">
                 <figcaption class="fig--small">Lorem ipsum dolor sit</figcaption>
             </figure>
 
@@ -243,7 +243,7 @@
                 I’ll tell you in detail about my desserts, give you ideas,
                 and I will choose the best option for you!
             </p>
-            <button class="btn btn--pink reviews__btn">Order here</button>
+            <button class="btn btn--pink reviews__btn">Contact me</button>
         </div>
         
         <div class="berry">
@@ -257,7 +257,7 @@
                     <svg class="contact__icon">
                         <use xlink:href="img/sprite.svg#icon-location"></use>
                     </svg>
-                    <p>1234 Patrick ponds, Moscow</p>
+                    <a href="https://www.google.com/maps/place/%D0%9F%D0%B0%D1%82%D1%80%D0%B8%D0%B0%D1%80%D1%88%D0%B8%D0%B5+%D0%BF%D1%80%D1%83%D0%B4%D1%8B/@55.763448,37.590152,17z/data=!3m1!4b1!4m6!3m5!1s0x46b54a3828f66c9f:0x689583e9993c12e6!8m2!3d55.763445!4d37.5927269!16s%2Fg%2F12hphvcw3?hl=ru&entry=ttu" >1234 Patrick ponds, Moscow</a>
                     <svg class="contact__icon">
                         <use xlink:href="img/sprite2.svg#icon-phone"></use>
                     </svg>
@@ -265,7 +265,7 @@
                     <svg class="contact__icon">
                         <use xlink:href="img/sprite2.svg#icon-mail"></use>
                     </svg>
-                    <p>order@sweettime.com</p>
+                    <a href="mailto:order@sweettime.com">order@sweettime.com</a>
                 </div>
                 <button class="btn btn--pink contact__btn">Contact</button>
 
@@ -277,27 +277,30 @@
         </div>
         <div class="footer">
             <img src="img/logo.png" alt="logo" class="footer__logo">
-                <ul class="footer__menu footer__menu--1">
-                    <li class="footer__item"><a href="#gallery" class="footer__link">Our desserts</a></li>
-                    <li class="footer__item"><a href="#about" class="footer__link">About</a></li>
-                    <li class="footer__item"><a href="#mywork" class="footer__link">My work</a></li>
-                </ul>
-                <ul class="footer__menu footer__menu--2">
-                    <li class="footer__item"><a href="#delivery" class="footer__link">Delivery and Payment</a></li>
-                    <li class="footer__item"><a href="#reviews" class="footer__link">Reviews</a></li>
-                    <li class="footer__item"><a href="#contact" class="footer__link">Contact</a></li>
-                </ul>
-                <div class="footer__menu footer__menu--3">
-                    <button class="footer__btn btn btn--light">Contact</button>
-                    <div class="footer__social">
-                        <a href="#" class="nav__social-link"><i class="nav__icon fab fa-whatsapp"></i></a>
-                        <a href="#" class="nav__social-link"><i class="nav__icon fab fa-facebook-square"></i></a>
-                        <a href="#" class="nav__social-link"><i class="nav__icon fab fa-instagram"></i></a>
-                    </div>
+            <ul class="footer__box">
+                <li><a href="#gallery" class="footer__link">Gallery</a></li>
+                <li><a href="#about" class="footer__link">About me</a></li>
+                <li><a href="#mywork" class="footer__link">My work</a></li>
+            </ul>
+            <ul class="footer__box">
+                <li><a href="#delivery" class="footer__link">Delivery and Payment</a></li>
+                <li><a href="#reviews" class="footer__link">Reviews</a></li>
+                <li><a href="#contact" class="footer__link">Contact</a></li>
+            </ul>
+            <div class="footer__socials">
+                <button class="footer__btn btn btn--light">Contact</button>
+                <div class="footer__icons">
+                    <a href="https://web.whatsapp.com/" class="footer__icons--wtsp">
+                        <img src="img/icon-watsapp.png" alt="whatsapp-icon">
+                    </a>
+                    <a href="https://www.instagram.com/" class="footer__icons--insta">
+                        <img src="img/icon-insta.png" alt="insta-icon">
+                    </a>
                 </div>
+            </div>
         </div>
         <p class="copyright">
-            Design by <a href="https://www.behance.net/olgashesta1041" target="_blank" class="copyright__link">Olga Shestakova</a>. Built by <a href="https://https://github.com/TanyaSeagull" target="_blank" class="copyright__link">Tanya Seagull</a>.
+            Design by <a href="https://www.behance.net/olgashesta1041" target="_blank" class="copyright__link">Olga Shestakova</a>. Developed by <a href="https://https://github.com/TanyaSeagull" target="_blank" class="copyright__link">Tanya Seagull</a>.
         </p>
     </div>
 </body>
