--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
             </h1>
             <p>At tempor commodo ullamcorper a lacus</p>
 
-            <button class="btn btn--dark header__btn">
-                <a class="btn__link--dark" href="#order">Order</a>
-            </button>
+            <a href="#order" class="btn btn--dark header__btn">Order</a>
            
             <img src="img/main tart.png" alt="tart" class="header__img">
         </div>
@@ -96,7 +94,7 @@
             <img src="img/malina 1.png" alt="raspberry" class="berry__3">
         </div>
 
-        <div class="about" id="about">
+        <section  id="about" class="about">
             <img src="img/Яна.png" alt="owner" class="about__pic">
             <div class="about__text">
                 <h2 class="about__h2">About me</h2>
@@ -107,7 +105,7 @@
                     Any of your ideas can be brought to life!
                 </p>
             </div>
-        </div>
+        </section>
 
         <div class="features">
             <div class="table">
@@ -185,7 +183,7 @@
             <img src="img/Клубника 2.png" alt="strawberry" class="berry__5">
         </div>
 
-        <div class="delivery" id="delivery">
+        <section class="delivery" id="delivery">
             <h2 class="delivery__h2">Delivery and Payment</h2>
             <div class="delivery__card delivery__card--1">
                 <svg class="delivery__icon">
@@ -209,7 +207,7 @@
                 <p>No pre-payment.</p>
                 <p>For orders over $30 pre-payment is 20%</p>
             </div>
-        </div>
+        </section>
 
         <div class="reviews" id="reviews">
             <h2 class="reviews__h2">Reviews</h2>
@@ -300,7 +298,7 @@
             </div>
         </div>
         <p class="copyright">
-            Design by <a href="https://www.behance.net/olgashesta1041" target="_blank" class="copyright__link">Olga Shestakova</a>. Developed by <a href="https://https://github.com/TanyaSeagull" target="_blank" class="copyright__link">Tanya Seagull</a>.
+            Design by <a href="https://www.behance.net/olgashesta1041" target="_blank" class="copyright__link">2023 Design by Olga Shestakova</a>. Developed by <a href="https://https://github.com/TanyaSeagull" target="_blank" class="copyright__link">Tanya Seagull</a>.
         </p>
     </div>
 </body>
