--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </div>
         </div>
         <p class="copyright">
-            Design by <a href="https://www.behance.net/olgashesta1041" target="_blank" class="copyright__link">2023 Design by Olga Shestakova</a>. Developed by <a href="https://https://github.com/TanyaSeagull" target="_blank" class="copyright__link">Tanya Seagull</a>.
+            <a href="https://www.behance.net/olgashesta1041" target="_blank" class="copyright__link">2023 Design by Olga Shestakova</a>. Developed by <a href="https://https://github.com/TanyaSeagull" target="_blank" class="copyright__link">Tanya Seagull</a>.
         </p>
     </div>
 </body>
